# PredAI

./: .dockerignore  .gitignore  docker-compose.yml  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  social-ingest.yml
ai/: .env.example  main.py
ai/agents/: arbitrage_agent.py  base_agent.py  market_maker.py  social_agent.py
ai/economics/: reward_curves.py  slashing_logic.py  staking_logic.py
ai/inference/: confidence.py  drift_detection.py  runner.py  service.py
ai/registry/: agent_registry.py  model_registry.py
ai/training/: datasets.py  evaluation.py  trainer.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260302_000001_baseline.py  20260303_000002_username_unique_index.py
backend/api/: agents.py  ai.py  auth.py  governance.py  main.py  markets.py  oracles.py  rwa.py  social.py  stats.py  users.py  yield_api.py
backend/core/: config.py
backend/indexing/: block_listener.py  replay_engine.py
backend/indexing/event_handlers/: agent_events.py  market_events.py  oracle_events.py  rwa_events.py  yield_events.py
backend/infra/: email.py  openai_client.py  redis.py  stripe_client.py  transak.py  web3.py
backend/messaging/: kafka_consumer.py  kafka_producer.py  topics.py
backend/persistence/: db.py  migrations.py
backend/persistence/models/: agent.py
backend/persistence/repositories/: agent_repo.py  market_repo.py  models.py  oracle_repo.py  rwa_repo.py  social_repo.py  stats_repo.py  user_repo.py  yield_repo.py
backend/rust-core/: Cargo.toml
backend/rust-core/src/: lib.rs  oracle_consensus.rs  risk_engine.rs  scoring.rs
backend/schema/: schema.prisma
backend/security/: auth.py  invariants.py  rate_limits.py
backend/services/: agent_service.py  ai_client.py  governance_service.py  market_service.py  oracle_service.py  rwa_service.py  scoring_client.py  social_service.py  stats_service.py  user_service.py  yield_service.py
backend/tests/security/: test_auth_signature.py  test_rate_limit_fail_closed.py
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/agents/: AgentNFT.sol  AgentRegistry.sol  AgentScoring.sol  AgentStaking.sol
contracts/cache/: solidity-files-cache.json
contracts/contracts/: ProtocolImports.sol
contracts/core/: MarketFactory.sol  MarketRegistry.sol  PredictionMarket.sol  SettlementEngine.sol
contracts/deploy/: deploy_agent_registry.ts  deploy_agents.ts  deploy_core.ts  deploy_libraries.ts  deploy_oracles.ts
frontend/: .env.example  ext-env.d.ts  next.config.cjs  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx  (+2 more)
scripts/: backfill_events.py  emergency_pause.ts  migration_runner.py  package-lock.json  package.json  seed_real_markets.py  social_ingest_worker.py
(+175 files in other folders)
